fixed selection in modal spacing

--- a/src/app/components/authorized-perview-projects/authorized-perview-projects.component.scss
+++ b/src/app/components/authorized-perview-projects/authorized-perview-projects.component.scss
@@ -13,8 +13,15 @@ nav {
    tbody{
     tr{
       td{
+        padding-bottom: 3%;
+        margin-bottom: 3%;
+        .ng2-smart-actions.ng2-smart-action-multiple-select {
+          padding-bottom: 4%;
+        }
         input[type="checkbox"] {
           opacity: 1;
+          padding-bottom: 0;
+          margin-bottom: 14px;
         }
       }
     }
