--- a/src/app/components/authorized-planview-projects/authorized-planview-projects.component.scss
+++ b/src/app/components/authorized-planview-projects/authorized-planview-projects.component.scss
@@ -10,6 +10,11 @@ button,a {
      tbody{
       tr{
         td{
+          padding-bottom: 3%;
+          margin-bottom: 3%;
+          .ng2-smart-actions.ng2-smart-action-multiple-select {
+            padding-bottom: 4%;
+          }
           input[type="checkbox"] {
             opacity: 1;
           }
