--- a/src/app/components/mapper-footer/mapper-footer.component.css
+++ b/src/app/components/mapper-footer/mapper-footer.component.css
@@ -1,5 +1,5 @@
-.btn {
-    background: #337ab7;
-    border-color: #2e6da4;
+a {
+    background: #337ab7; 
+    border-color: #2e6da4; 
     border: thick;
   }
