--- a/src/app/list-of-mapped-project-relationships/list-of-mapped-project-relationships.component.css
+++ b/src/app/list-of-mapped-project-relationships/list-of-mapped-project-relationships.component.css
@@ -1,15 +1,18 @@
+.btn {
+    background-color:  #337ab7;
+}
+.btn:hover {
+    background-color: #26a69a;
+}
 i {
     border-radius: 100%;
     color: white;
     cursor: pointer;
     margin-left: 1.5%;
-}   
+} 
 
-.btn {
-    background: #337ab7;
-    border-color: #2e6da4;
-  }
 
 .btn.cancel {
  background: rgb(229, 229, 229);
 }
+
